# uinp

./: .gitignore  README.md  bash_profile.sh  links.txt  resume.html  resume.txt  resume_for_jd.html  resume_project_first.html  web_thoughts.html
clanguages/gomoku-c/: .gitignore  CMakeLists.txt  Makefile  README.md
clanguages/gomoku-c/include/: board.h  configuration.h  index-provider.h  lcg.h  log.h  macro-constants.h  macro-functions.h  table-utilities.h  terminal-utilities.h  testool.h  types.h
clanguages/gomoku-c/src/: ai-player.c  ai-player.h  ai_player.c  ai_player.h  board.c  index-provider.c  lcg.c  log.c  macro-constants.h  main.c  table-utilities.c  terminal-utilities.c
clanguages/gomoku-c/test/: ai-test.c  ai-test.h  board-test.c  board-test.h  main.c  testool.c  testool.h
clanguages/learn-c-syntax/: syntax-provider.js  syntax-viewer.html
clanguages/learn-gnu-make/: Makefile  README.md  hello-world.makefile  notes.makefile  quick-try.c  sandbox.cpp
clanguages/learn-sdl2/: Makefile  learning.rc  resource.h
clanguages/learn-tensorflow2/: arithmatic-tf2.py  arithmatic.py  main-tf2.py  mnist-tf2.py  requirements.txt  sandbox.py  try-gym-frozen-lake.py  try-matplot.py  try-mini-cheetah.py
clanguages/linux-sdl2/: CMakeLists.txt  learning.c
clanguages/linux-sdl2-canvas/: .gitignore  CMakeLists.txt  README.md
clanguages/linux-sdl2-canvas/include/: callback-types.h  macro-functions.h  matrix.h  physics.h
clanguages/linux-sdl2-canvas/shaders/: colormap.gl  complex.gl  first.fs  first.vs  mandelbrot.fs  shader_toy.fs
clanguages/linux-sdl2-canvas/src/: gl_main.c  main.c  physics.c  render.h
clanguages/linux-sdl2-canvas/test/: main.c
clanguages/linux-sdl2/include/: macro-functions.h  matrix.h  physics.h
clanguages/linux-sdl2/src/: learning.c  main.c  matrix.c  physics.c  physics.h  render.c  render.h
clanguages/linux-sdl2/test/: main.c  test-physics.h
clanguages/magic-tavern/: formula-without-brackets.c  json-presenter.html  number-of-operations.c
clanguages/poj/: .gitignore  solving.c
configs/: eclipse-dictionary.txt  hachibot.sh  shortcuts.sh
configs/atom/: init.coffee  keymap.cson  snippets.cson
configs/nginx/: ws-platform.conf  yii.conf
gists/: .gitignore  median_of_medians.js  quicksort.js  water-effect.html  water_effect.html  water_effect_gl.html
gists/algorithms-for-sort/: prepare_to_sort.js  template.js
gists/algorithms_for_sort/: heap.js  heap_sort.js  prepare_to_sort.js  selection_sort.js
gists/gomoku/: CMakeLists.txt
gists/gomoku/include/: board.h  coordinates-tool.h
gists/gomoku/src/: board.cpp  coordinates-tool.cpp  gomoku.cpp
gists/gomoku/src/impl/: board.h
gists/learn-c-syntax/: syntax-provider.js  syntax-viewer.html
gists/learn-glfw/: 01_hello_SDL.cpp  Makefile  SDL-05-optimized-image-and-scale.c  SDL_02_image_on_screen.cpp  SDL_03_event_loop.cpp  SDL_05_optimize_image_and_scale.cpp  hello.cpp  learning.c  learning.res  open-window.cpp  try-sdl.cpp
gists/learn-gnu-make/: Makefile  README.md  macro-sandbox.c  quick-try.c  sandbox.c  sandbox.cpp  table.wchars
gists/learn-sdl2/: Makefile-c-version  Makefile_until05  SDL_04_key_press.cpp  SDL_06_jpg_extension(failed).cpp
gists/leet-code/: longest_brackets.js
gists/leet_code/: longest_brackets.js  regex.js
gists/magic-tavern/: action-queue.c  json-presenter.html  last-6-digits-of-fibonacci.c  power-of-two.c  problem-for-fresh.c  problem-json-presenter.txt
gists/pjo/: .gitignore  1001.cpp  1002_linked_list.cpp  a.out  batch_read_number.c  creating.c  input.txt  merge_sort.c  solving.c  solving.cpp
gists/poj/: input.txt
gists/the-game/: package.json
gists/the_game/: .gitignore  package-lock.json  package.json
gists/tree-creator/: index.html
javascripts/: db.js  water-effect-gl.html  water-effect.html
javascripts/algorithms-for-sort/: create_file.js  insertion_sort.js  quick_sort.js
javascripts/encryptor-js/: index.js  (+2 more)
notes/: activation-code.txt  career.md  dev-notes.md  dev-notes.txt  dev_notes.txt  effective-cpp.txt  es2015.txt  front-end-notes.md  hachibot.md  hachibot.txt  language-learning.md  linux-notes.md  machine-learning-brief-cn.txt  machine-learning-notes.txt  ros-learning.sh  slg_notes.txt  todos.txt  web_thoughts.html  webstorm-activation-code.txt
pythons/: freq_parser.py  trojan_config_template.json  trojan_helper.py
resumes/: resume-new.html  resume.html  resume_new.html
scripts/: break.vbs  ss.js
slg-legacies/: 前端工作的说明.docx
slg_legacies/: 地图生成器原理简介.docx
texts/: 人生难-生活和一切.gpg  求职难-说说算法题.txt
(+187 files in other folders)
